fixed overflow error on logo.svg

--- a/frontend/src/screens/Home/Home.module.css
+++ b/frontend/src/screens/Home/Home.module.css
@@ -4,6 +4,8 @@
     background: linear-gradient(to right, #2a5298, #1e3c72);
 
     height: 100vh;
+    position: relative;
+    overflow: hidden;
 }
 
 .image {
@@ -12,14 +14,13 @@
     z-index: 0;
     top: 10%;
     right: -7%;
-    overflow: hidden;
-
 }
 
 .homeIntro {
     position: relative;
     z-index: 1;
     border: 4px solid blue;
+    overflow: hidden;
 }
 
 @media (max-width: 1000px) {
